--- a/simlane/templates/teams/discord/bot_invite_modal.html
+++ b/simlane/templates/teams/discord/bot_invite_modal.html
@@ -89,11 +89,11 @@
                     loadingIcon.classList.remove('hidden');
     
                     // Make API call to check bot status
-                    fetch(`/api/clubs/{{ club.slug }}/discord/status/`, {
+                    fetch(`/api/discord/clubs/{{ club.id }}/status/`, {
                         method: 'GET',
+                        credentials: 'include', // send session cookies
                         headers: {
-                            'Authorization': `Bearer ${localStorage.getItem('access_token')}`,
-                            'Content-Type': 'application/json',
+                            'Accept': 'application/json',
                         },
                     })
                     .then(response => response.json())
